// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OcResourceIcon renders OcIcon for resource type file in size large 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" name="resource-type-file" size="large"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file in size medium 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" name="resource-type-file" size="medium"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file in size small 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" name="resource-type-file" size="small"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file in size xlarge 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" name="resource-type-file" size="xlarge"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file in size xsmall 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" name="resource-type-file" size="xsmall"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file in size xxlarge 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" name="resource-type-file" size="xxlarge"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file in size xxxlarge 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" name="resource-type-file" size="xxxlarge"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with extension "not-a-real-extension" in size large 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="red" name="resource-type-madeup-extension" size="large"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with extension "not-a-real-extension" in size medium 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="red" name="resource-type-madeup-extension" size="medium"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with extension "not-a-real-extension" in size small 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="red" name="resource-type-madeup-extension" size="small"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with extension "not-a-real-extension" in size xlarge 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="red" name="resource-type-madeup-extension" size="xlarge"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with extension "not-a-real-extension" in size xsmall 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="red" name="resource-type-madeup-extension" size="xsmall"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with extension "not-a-real-extension" in size xxlarge 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="red" name="resource-type-madeup-extension" size="xxlarge"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with extension "not-a-real-extension" in size xxxlarge 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="red" name="resource-type-madeup-extension" size="xxxlarge"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with mimetype "not-a-real-mimetype" in size large 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" name="resource-type-file" size="large"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with mimetype "not-a-real-mimetype" in size medium 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" name="resource-type-file" size="medium"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with mimetype "not-a-real-mimetype" in size small 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" name="resource-type-file" size="small"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with mimetype "not-a-real-mimetype" in size xlarge 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" name="resource-type-file" size="xlarge"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with mimetype "not-a-real-mimetype" in size xsmall 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" name="resource-type-file" size="xsmall"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with mimetype "not-a-real-mimetype" in size xxlarge 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" name="resource-type-file" size="xxlarge"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type file with mimetype "not-a-real-mimetype" in size xxxlarge 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-file" color="var(--oc-color-text-default)" name="resource-type-file" size="xxxlarge"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type folder in size large 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-folder" color="var(--oc-color-icon-folder)" name="resource-type-folder" size="large"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type folder in size medium 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-folder" color="var(--oc-color-icon-folder)" name="resource-type-folder" size="medium"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type folder in size small 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-folder" color="var(--oc-color-icon-folder)" name="resource-type-folder" size="small"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type folder in size xlarge 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-folder" color="var(--oc-color-icon-folder)" name="resource-type-folder" size="xlarge"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type folder in size xsmall 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-folder" color="var(--oc-color-icon-folder)" name="resource-type-folder" size="xsmall"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type folder in size xxlarge 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-folder" color="var(--oc-color-icon-folder)" name="resource-type-folder" size="xxlarge"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type folder in size xxxlarge 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-folder" color="var(--oc-color-icon-folder)" name="resource-type-folder" size="xxxlarge"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type space in size large 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-space" color="var(--oc-color-swatch-passive-default)" name="layout-grid" size="large"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type space in size medium 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-space" color="var(--oc-color-swatch-passive-default)" name="layout-grid" size="medium"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type space in size small 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-space" color="var(--oc-color-swatch-passive-default)" name="layout-grid" size="small"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type space in size xlarge 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-space" color="var(--oc-color-swatch-passive-default)" name="layout-grid" size="xlarge"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type space in size xsmall 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-space" color="var(--oc-color-swatch-passive-default)" name="layout-grid" size="xsmall"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type space in size xxlarge 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-space" color="var(--oc-color-swatch-passive-default)" name="layout-grid" size="xxlarge"></oc-icon>
  <!--v-if-->
</span>
`;

exports[`OcResourceIcon renders OcIcon for resource type space in size xxxlarge 1`] = `
<span>
  <oc-icon class="oc-resource-icon oc-resource-icon-space" color="var(--oc-color-swatch-passive-default)" name="layout-grid" size="xxxlarge"></oc-icon>
  <!--v-if-->
</span>
`;
